text-align fix

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -277,7 +277,7 @@ input[type="number"] {
   }
 }
 .additonalAdvMsg {
-  margin: 0px;
+  margin: 4px;
   p {
     background-color: @light;
     padding: 10px;
